#3578 Fix z-index issue with admin bar quick links and content structure tooltip (#5630)
Props: Faishal Saiyed

--- a/components/popover/style.scss
+++ b/components/popover/style.scss
@@ -48,6 +48,7 @@
 		&.is-bottom {
 			top: 100%;
 			margin-top: 8px;
+			z-index: z-index( ".components-popover.is-bottom" );
 
 			&:before {
 				top: -8px;
